# LO_Storage

./: .gitignore  CMakeLists.txt  LO_Storage.pro  LO_Storage.pro.user.cf9cf15  classdiagram.qmodel  dialogpullfile.cpp  dialogpullfile.h  dialogpullfile.ui  dialogpushfile.cpp  dialogpushfile.h  dialogpushfile.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pgconnection.cpp  pgconnection.h  pgoperations.cpp  pgoperations.h
.github/workflows/: release.yml
include/server/: pg_config.h  port.h
include/server/parser/: gram.h
libs/: libcurl.lib  libexslt.lib  libpgcommon.lib  libpgport.lib  libpq.lib  libxml2.lib  libxslt.lib  postgres.lib  uuid.lib
